Added default sort field configuration. Moved all configuration over to the configuration model.

--- a/app/views/spree/products/_facets.html.erb
+++ b/app/views/spree/products/_facets.html.erb
@@ -1,6 +1,7 @@
 <%
-facets_arr = Spree::Search::SpreeSunspot.configuration.display_facets
-limit = Spree::SunspotSearch::Config[:facet_display_limit]
+conf = Spree::Search::SpreeSunspot.configuration
+facets_arr = conf.display_facets
+limit = conf.facet_display_limit
 
 if @taxon
     display_list = @taxon.leaf? ? [@taxon.id] : @taxon.children.map(&:id)
