--- a/app/views/spree/products/_sort_bar.html.erb
+++ b/app/views/spree/products/_sort_bar.html.erb
@@ -1,5 +1,5 @@
 <%
-if not params.keys.detect { |k| k != 'controller' and k != 'action' }.nil? and params[:controller] != 'spree/taxons'
+if !params.keys.detect { |k| k != 'controller' && k != 'action' }.nil? && params[:controller] != 'spree/taxons'
 	# hate to throw this logic here (messy)
 	# I think it would be worse to create a one-time-use helper method
 	options = Spree::Search::SpreeSunspot.configuration.sort_fields.map do |key, value|
